feat(dev): improve local environment lifecycle controls
Add detached launch, attach, status, logs and stop controls, plus foreground port preflight and robust signal handling.

Expose the development workflow consistently through the CLI, Maven plugin and Gradle plugin, with updated documentation and tests.